# hpa-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yaml
hack/: kube-prometheus.sh
k8s/: deployments.yaml  hpa.yaml  service.yaml
prometheus/: api.yaml  helm.sh  values.yaml
prometheus/adapter/: backup.yaml  rules.yaml  values.yaml
src/: handlers.rs  lib.rs
